--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.26.1",
     "prop-types": "^15.6.2",
     "react": "16.6.3",
-    "react-native": "0.57.8",
+    "react-native": "^0.68.0",
     "react-native-svg": "^9.5.3",
-    "react-navigation": "2.18.2",
+    "react-navigation": "^4.4.4",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.0"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3"
   },
